<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SonidosInstruccionesActivity">

    <TextView
        style="@style/text_view_style"
        android:textSize="35dp"
        android:layout_marginTop="@dimen/margin_top1"
        android:layout_gravity="center_horizontal"
        android:text="@string/juego_sonidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/text_view_style"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_rigth"
        android:textSize="35sp"
        android:layout_gravity="center_vertical"
        android:text="@string/instrucciones_sonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/text_view_style"
        android:layout_marginTop="@dimen/margin_top1"
        android:text="@string/suerte"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_height="match_parent">

        <Button
            style="@style/button_style"
            android:id="@+id/btn_empezar_sonido"
            android:onClick="onClick"
            android:text="@string/empezar"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>