<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PadresActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/background2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/padres"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top2"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_rapido"
            style="@style/button_style"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_rapida" />

        <Button
            style="@style/button_style"
            android:id="@+id/btn_frecuentes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_frecuentes"
            />

        <Button
            style="@style/button_style"
            android:id="@+id/btn_mensajes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_mensaje"
            />

        <Button
            style="@style/button_style"
            android:id="@+id/btn_dudas"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_duda"
            />

    </LinearLayout>


</LinearLayout>