<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_3"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:background="@color/background2"
        android:orientation="vertical">

            <ImageView
                android:layout_marginTop="@dimen/margin_top1"
                android:layout_width="@dimen/tam_img_2"
                android:layout_height="@dimen/tam_img_2"
                android:layout_gravity="center"
                android:src="@drawable/open_book"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top2"
        android:orientation="vertical">

        <Button
            style="@style/button_style"
            android:id="@+id/btn_padre"
            android:layout_width="@dimen/btn_with"
            android:layout_height="wrap_content"
            android:text="@string/btn_padre"/>

        <Button
            style="@style/button_style"
            android:id="@+id/btn_hijo"
            android:layout_width="@dimen/btn_with"
            android:layout_height="wrap_content"
            android:text="@string/btn_hijo"/>

        <Button
            style="@style/button_style"
            android:id="@+id/btn_about"
            android:layout_width="@dimen/btn_with"
            android:layout_height="wrap_content"
            android:text="@string/btn_about"/>

    </LinearLayout>
</LinearLayout>