<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background2"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/student_1"
            android:layout_width="200dp"
            android:layout_height="200dp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_rigth"
                style="@style/text_view_style"
                android:text="@string/acerca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_rigth"
                style="@style/text_view_style"
                android:text="@string/creador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_rigth"
                style="@style/text_view_style"
                android:text="@string/datos_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>