<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CuestionarioRapidoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_rigth"
            android:layout_marginLeft="@dimen/margin_left"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida1" />

            <RadioGroup
                android:id="@+id/rg_1"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_1"
                    android:checked="true"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_11"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida2" />

            <RadioGroup
                android:id="@+id/rg_2"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_2"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_12"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida3" />

            <RadioGroup
                android:id="@+id/rg_3"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_3"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_13"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida4" />

            <RadioGroup
                android:id="@+id/rg_4"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_4"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_14"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida5" />

            <RadioGroup
                android:id="@+id/rg_5"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_5"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_15"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida6" />

            <RadioGroup
                android:id="@+id/rg_6"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_6"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_16"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida7" />

            <RadioGroup
                android:id="@+id/rg_7"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_7"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_17"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida8" />

            <RadioGroup
                android:id="@+id/rg_8"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_8"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_18"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida9" />

            <RadioGroup
                android:id="@+id/rg_9"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_9"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_19"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="@dimen/margin_top1"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_rapida10" />

            <RadioGroup
                android:id="@+id/rg_10"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_10"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_si" />

                <RadioButton
                    android:id="@+id/rb_20"
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opcion_no" />

            </RadioGroup>

            <Button
                style="@style/button_style"
                android:id="@+id/btn_aceptar_rapido"
                android:onClick="onClick"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Aceptar"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>